# sudoku_generator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  Dockerfile.macos  complete-2.txt  completed.txt  gen-28-05-2020-14-38.txt  gen.txt
.github/workflows/: docker-image.yml
fluentd/: forward-http.conf
k8s/: README.txt  ep.yaml  fluentd-configmap.yaml  sgd-deployment.yaml  svc.yaml
misc/: complete-3.txt
src/: cmd.rs  console.rs  file.rs  lib.rs  main.rs  utils.rs  writer.rs
src/job/: result.rs
src/types/: block.rs  generated.rs  grid.rs  mod.rs  result.rs  stats.rs
src/utils/: candidates.rs  mod.rs  picker.rs
