[package]
name = "sudoku_generator"
version = "0.1.0"
authors = ["Ali Guler <maguler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = { git = "https://github.com/yerlikovboy/sudoku"} 
rand = "0.7"
